--- a/src/main/resources/static/signUp.html
+++ b/src/main/resources/static/signUp.html
@@ -76,7 +76,7 @@
 								<span class="focus-input100"></span>
 							</div>			
 							<div class="wrap-input100 validate-input m-b-20" data-validate="Type your driver's license expiraty date">
-								<input id="fExpLicense" class="input100" pattern="(0[1-9]|1[0-9]|2[0-9]|3[01]).(0[1-9]|1[012]).[0-9]{4}" mask="39.19.2999" restrict="reject"" clean="true" ng-model="fLicense" type="text" maxlength="10"  required name="fExpLicense" placeholder="Driver's license expiry date (dd/MM/yyyy) (*)" >
+								<input id="fExpLicense" class="input100"  mask="39.19.2999" restrict="reject"" clean="true" ng-model="fLicense" type="text" maxlength="10"  required name="fExpLicense" placeholder="Driver's license expiry date (dd/MM/yyyy) (*)" >
 								<span class="focus-input100"></span>
 							</div>
 							<div class="wrap-input100 validate-input m-b-20" data-validate="Type your DNI">
@@ -88,7 +88,7 @@
 								<span class="focus-input100"></span>
 							</div>
 							<div class="wrap-input100 validate-input m-b-20" data-validate="Type your birth date">
-								<input id="birthDate" class="input100" pattern="(0[1-9]|1[0-9]|2[0-9]|3[01]).(0[1-9]|1[012]).[0-9]{4}" mask="39.19.2999" restrict="reject"" clean="true" ng-model="fLicense" type="text" maxlength="10"  required name="birthDate" placeholder="Birth date (dd/MM/yyyy) (*)">
+								<input id="birthDate" class="input100"  mask="39.19.2999" restrict="reject"" clean="true" ng-model="fLicense" type="text" maxlength="10"  required name="birthDate" placeholder="Birth date (dd/MM/yyyy) (*)">
 								<span class="focus-input100"></span>
 							</div>
 							<div class="wrap-input100 m-b-20">
@@ -112,7 +112,7 @@
 							</div>
 							<div class="wrap-input100 validate-input m-b-20" data-validate="Type your DNI">
 								<label class="col-sm-2  radio-inline input100-radio">Add Cars:</label>
-								<button id="addCar" class="btn btn-default" ng-click="modalAddCar" name="addCar">
+								<button id="addCar" class="btn btn-default" ng-click="modalAddCar();" name="addCar">
 								<span class="focus-input100"></span>	
 							</div>
 							<!-- 
@@ -141,7 +141,7 @@
 				</div>
 			</div>
 
-
+<!-- pattern="(0[1-9]|1[0-9]|2[0-9]|3[01]).(0[1-9]|1[012]).[0-9]{4}" -->
 
 		</div>
 		
@@ -211,6 +211,7 @@
 	<script src="lib/angular-route.js"></script>
 	<script src="lib/angular-locale_es-es.js"></script>
 	<script src="lib/ngMask.min.js"></script>
+	<script src="lib/ui-bootstrap-tpls-2.5.0.min.js"></script>
 <!--===============================================================================================-->
 	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
 	
