--- a/src/main/resources/static/html/newTrip.html
+++ b/src/main/resources/static/html/newTrip.html
@@ -4,19 +4,21 @@
 	<br />
 	<div style="position: relative;display: inline-block;text-align: center;"  class="col-sm-2 col-xs-7">
 		<img  style="width: 145%;" src="/images/cronometro.gif" />
-		<div style="font-size: 37px;position: absolute;top: 42%;left: 92%;transform: translate(-50%, -50%);">10</div>
+		<div style="font-size: 37px;position: absolute;top: 42%;left: 92%;transform: translate(-50%, -50%);">
+			<span>{{timeTrip}}</span>
+		</div>
 		<div style="font-size: 37px;position: absolute;top: 57%;left: 92%;transform: translate(-50%, -50%);">min</div>
 	</div>
 	<div class="col-sm-10 col-xs-10" style="float: right;">	
 		<div class="row" style="text-align: right;">
-			<label class="col-sm-2 col-xs-3">Starting Point: </label>
-			<input class="inputTrip col-sm-8 col-xs-8" type="text"></input>
+			<label class="col-sm-2 col-xs-3">Origin: </label>
+			<input id="origin-input" class="inputTrip col-sm-8 col-xs-8" placeholder="" type="text"></input>
 		</div>
 		<div class="row" style="text-align: right;margin-bottom: 15px;margin-top: 15px;">
 			<label class="col-sm-2 col-xs-3">Destination: </label>
-			<input class="inputTrip col-sm-8 col-xs-8" type="text"></input>
+			<input id="destination-input" class="inputTrip col-sm-8 col-xs-8" placeholder="" type="text"></input>
 		</div>
-		<div class="row" style="text-align: right;">
+		<div class="row" style="text-align: right;margin-left: 18px;">
 			<div class="col-sm-4 col-xs-12">
 				<label class="col-sm-4 col-xs-3">Date: </label>
 				<input style="line-height: inherit !important;" class="inputTrip col-sm-8 col-xs-7" type="date"></input>
