almacena viaje/mapa

--- a/src/main/resources/static/html/newTrip.html
+++ b/src/main/resources/static/html/newTrip.html
@@ -25,7 +25,7 @@
 			</div>	
 			<div class="col-sm-3 col-xs-12">
 				<label class="col-sm-4 col-xs-3">Time: </label>
-				<input style="line-height: inherit !important;" ng-model="time" class="inputTrip col-sm-8 col-xs-7" type="time"></input>
+				<input style="line-height: inherit !important;" ng-model="date" class="inputTrip col-sm-8 col-xs-7" type="time"></input>
 			</div>
 			<div class="col-sm-4 col-xs-12">
 				<label class="col-sm-6 col-xs-3">Available Seats: </label>
@@ -35,7 +35,7 @@
 		<div class="row" style="  margin-top: 24px;">
 			<div class="col-sm-4 col-xs-4"></div>
 			<div class="col-sm-4 col-xs-4">
-				<button type="button" ng-click="" class="login100-form-btn">Add Trip</button>
+				<button type="button" ng-click="addTrip();" class="login100-form-btn">Add Trip</button>
 			</div>			
 			<div class="col-sm-4 col-xs-4"></div>
 		</div>
